RESOLVED FIXED88661
[EFL] REGRESSION (r119788): tests rely on pathToLocalResource are failing after r119788
https://bugs.webkit.org/show_bug.cgi?id=88661
Summary [EFL] REGRESSION (r119788): tests rely on pathToLocalResource are failing aft...
Sudarsana Nagineni (babu)
Reported 2012-06-08 09:03:33 PDT
The following tests started failing after r119788. fast/dom/frame-loading-via-document-write.html = TEXT http/tests/security/frame-loading-via-document-write.html = TEXT http/tests/security/local-JavaScript-from-remote.html = TEXT http/tests/security/local-iFrame-from-remote.html = TEXT It seems we are constructing a String object from non-null-terminated UChar* returned by characters() and that is causing the issue. http://trac.webkit.org/browser/trunk/Tools/DumpRenderTree/efl/LayoutTestControllerEfl.cpp#L181
Attachments
Patch (1.33 KB, patch)
2012-06-08 09:18 PDT, Sudarsana Nagineni (babu)
cdumez: commit-queue-
Patch (3.71 KB, patch)
2012-06-10 10:18 PDT, Sudarsana Nagineni (babu)
no flags
Patch (3.75 KB, patch)
2012-06-10 23:58 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-06-08 09:18:21 PDT
Created attachment 146585 [details] Patch Pass string length explicitly when creating String object from non-null-terminated UChar* returned by characters().
Chris Dumez
Comment 2 2012-06-08 09:19:21 PDT
Comment on attachment 146585 [details] Patch LGTM.
Joshua Lock (joshuagl)
Comment 3 2012-06-08 09:31:51 PDT
I was just about to submit the same change, thanks.
Gyuyoung Kim
Comment 4 2012-06-09 04:25:17 PDT
Comment on attachment 146585 [details] Patch Looks fine.
Chris Dumez
Comment 5 2012-06-09 10:47:39 PDT
Skipping those tests in Bug 88714 to make the tree green. Please don't forget to unskip the tests.
Chris Dumez
Comment 6 2012-06-09 11:54:06 PDT
Comment on attachment 146585 [details] Patch Setting cq- because the patch at Bug 88714 has landed. Please update the patch and unskip the test cases before landing. Thanks.
Sudarsana Nagineni (babu)
Comment 7 2012-06-10 10:06:31 PDT
(In reply to comment #6) > Setting cq- because the patch at Bug 88714 has landed. Please update the patch and unskip the test cases before landing. Thanks. Cool. I will unskip those test cases.
Sudarsana Nagineni (babu)
Comment 8 2012-06-10 10:18:11 PDT
Created attachment 146743 [details] Patch Fixed issue in pathToLocalResource() and unskipped test cases.
Chris Dumez
Comment 9 2012-06-10 10:19:59 PDT
Comment on attachment 146743 [details] Patch Perfect, thanks!
Sudarsana Nagineni (babu)
Comment 10 2012-06-10 23:58:04 PDT
Created attachment 146794 [details] Patch rebased.
WebKit Review Bot
Comment 11 2012-06-11 12:45:36 PDT
Comment on attachment 146794 [details] Patch Clearing flags on attachment: 146794 Committed r119998: <http://trac.webkit.org/changeset/119998>
WebKit Review Bot
Comment 12 2012-06-11 12:45:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.