[EFL] REGRESSION (r119788): tests rely on pathToLocalResource are failing after r119788 https://bugs.webkit.org/show_bug.cgi?id=88661

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-06-11
Reviewed by Dirk Pranke.

Tools:

Pass string length explicitly when creating String object from
non-null-terminated UChar* returned by characters().

* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::pathToLocalResource):

LayoutTests:

Unskip test cases which rely on pathToLocalResource().

* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/106632@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119998 268f45cc-cd09-0410-ab3c-d52691b4dbfc